[tool.poetry]
name = "Leetcode Solutions"
version = "0.1.0"
description = "Solutions to Leetcode problems."
authors = ["Ryan Davis <davisr137@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"
coverage = "^6.5.0"
yapf = "^0.32.0"
pylint = "^2.15.5"
pylint-fail-under = "^0.3.0"
mypy = "^0.991"